--- a/style.css
+++ b/style.css
@@ -22,20 +22,16 @@ body{
     display: flex;
     flex-direction: column;
     align-items: start;
-    
     height: 97%;
-    border: solid;
+    border: none;
     width: 35%;
     border-radius: 38px;
     padding-left: 10px;
     padding-right: 10px;
     padding-top: 2px;
     padding-bottom: 2px;
-    background-color: rgba(128, 128, 128, 0.405);
-    border-width: 1px;
-    border-color: grey;
-    box-shadow: 0 0 10px grey;
-    backdrop-filter: blur(5px);
+    background-color: rgba(128, 128, 128, 0.203);
+    backdrop-filter: blur(10px);
 }
 .Ad_button{
     display: flex;
@@ -59,13 +55,14 @@ body{
     align-items: center;
     height: 75px;
     width: 99%;
-    border:solid rgba(128, 128, 128, 0.348);
+    /* border:solid rgba(128, 128, 128, 0.348); */
+    border: none;
     border-width: 1px;
-    box-shadow: 0 0 5px gray;
+    /* box-shadow: 0 0 5px gray; */
     margin-bottom: 10px;
     border-radius: 20px;
     background-color: none;
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(10px);
 }
 .top-content{
     display: flex;
