--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body{
     padding-bottom: 2px;
     background-color: rgba(128, 128, 128, 0.203);
     backdrop-filter: blur(10px);
+    box-shadow: 0 0 10px grey;
 }
 .Ad_button{
     display: flex;
@@ -93,15 +94,15 @@ body{
     align-items: start;
     
     height: 97%;
-    border: solid;
+    border: none;
     width: 35%;
     border-radius: 38px;
     padding-left: 10px;
     padding-right: 10px;
     padding-top: 2px;
     padding-bottom: 2px;
-    background-color: rgba(128, 128, 128, 0.405);
-    border-width: 1px;
+    background-color: rgba(128, 128, 128, 0.181);
+    
     border-color: grey;
     box-shadow: 0 0 10px grey;
     backdrop-filter: blur(10px);
